// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Shapes component should not render any shape or redactions 1`] = `
<div
  onDragOver={[Function]}
  onDrop={[Function]}
  style={
    Object {
      "height": "100%",
      "left": 0,
      "position": "absolute",
      "top": 0,
      "width": "100%",
      "zIndex": 1,
    }
  }
/>
`;

exports[`Shapes component should render all the shapes 1`] = `
<div
  onDragOver={[Function]}
  onDrop={[Function]}
  style={
    Object {
      "height": "100%",
      "left": 0,
      "position": "absolute",
      "top": 0,
      "width": "100%",
      "zIndex": 1,
    }
  }
>
  <Connect(ShapeRedaction)
    canEdit={true}
    key="0"
    shape={
      Object {
        "guid": "9a324f30-1423-11e9-bcb9-d719ddfb5f43",
        "h": 100,
        "imageIndex": 1,
        "w": 100,
        "x": 200,
        "y": 200,
      }
    }
    shapeType="redactions"
    zoomRatio={1}
  />
  <Connect(ShapeAnnotation)
    canEdit={true}
    key="0"
    shape={
      Object {
        "fontBold": "34",
        "fontColor": "red",
        "fontFamily": "arial",
        "fontItalic": "false",
        "fontSize": "12pt",
        "guid": "9a324f30-1423-11e9-bcb9-d719ddfb5f43",
        "h": 100,
        "imageIndex": 1,
        "index": 1,
        "lineHeight": 15,
        "text": "Example Text",
        "w": 100,
        "x": 10,
        "y": 10,
      }
    }
    shapeType="annotations"
    zoomRatio={1}
  />
  <Connect(ShapeHighlight)
    canEdit={true}
    key="0"
    shape={
      Object {
        "guid": "9a324f30-1423-11e9-bcb9-d719ddfb5f43",
        "h": 100,
        "imageIndex": 1,
        "w": 100,
        "x": 100,
        "y": 100,
      }
    }
    shapeType="highlights"
    zoomRatio={1}
  />
</div>
`;

exports[`Shapes component should render just redactions 1`] = `
<div
  onDragOver={[Function]}
  onDrop={[Function]}
  style={
    Object {
      "height": "100%",
      "left": 0,
      "position": "absolute",
      "top": 0,
      "width": "100%",
      "zIndex": 1,
    }
  }
>
  <Connect(ShapeRedaction)
    canEdit={true}
    key="0"
    shape={
      Object {
        "guid": "9a324f30-1423-11e9-bcb9-d719ddfb5f43",
        "h": 100,
        "imageIndex": 1,
        "w": 100,
        "x": 200,
        "y": 200,
      }
    }
    shapeType="redactions"
    zoomRatio={1}
  />
</div>
`;
